zerocopy-derive/tests/ui-msrv/privacy.stderr
error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:78:68
   |
78 |     let _: <StructWithNamedFields as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type =
   |                                                                    ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:80:68
   |
80 |     let _: <StructWithNamedFields as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type =
   |                                                                    ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:85:67
   |
85 |     let _: <StructWithAnonFields as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(0) }>>::Type =
   |                                                                   ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:87:67
   |
87 |     let _: <StructWithAnonFields as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type =
   |                                                                   ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:92:52
   |
92 |     let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
   |                                                    ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:93:52
   |
93 |     let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type = 0u16;
   |                                                    ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:97:51
   |
97 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(0) }>>::Type = 0u8;
   |                                                   ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:98:51
   |
98 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type = 0u16;
   |                                                   ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
   --> tests/ui-msrv/privacy.rs:100:51
    |
100 |     let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
    |                                                   ^
    |
    = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:29:72
   |
29 |         let _: <StructWithNamedFields as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
   |                                                                        ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:30:72
   |
30 |         let _: <StructWithNamedFields as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type = 0u16;
   |                                                                        ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:38:71
   |
38 |         let _: <StructWithAnonFields as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(0) }>>::Type = 0u8;
   |                                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:39:71
   |
39 |         let _: <StructWithAnonFields as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type = 0u16;
   |                                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:50:56
   |
50 |         let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
   |                                                        ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:51:56
   |
51 |         let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type = 0u16;
   |                                                        ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:63:55
   |
63 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(0) }>>::Type = 0u8;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:64:55
   |
64 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(1) }>>::Type = 0u16;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`

error[E0747]: type provided when a constant was expected
  --> tests/ui-msrv/privacy.rs:66:55
   |
66 |         let _: <Enum as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(a) }>>::Type = 0u8;
   |                                                       ^
   |
   = help: const arguments cannot yet be inferred with `_`
